--- a/index.html
+++ b/index.html
@@ -207,21 +207,25 @@ opacity: 1;
 
 １：山札をシャフルして、５枚ずつプレイヤーに配る。<br>
 ２：一番最近に居酒屋に行った人が、最初のスタートプレイヤーになります。<br>
-３：時計回りでカードを一枚出す。たたし同じカードを出すことができない。<br>
-４：カードを一枚を山札から引いて、次のプレイヤーのターンになる。<br>
+３：時計回りで手札から一枚を出す。たたし同じカードを出すことができない。<br>
+４：山札から一枚引いて、次のプレイヤーのターンになる。<br>
 ５：合計金額を宣言しながら順番にカードを出し、キリ番(2、3、4000円)をゲットして「ゴチで～す」と宣言する。<br>
 ６：キリ番ゲットした前のプレイヤーは場のカードを全て引き取る。<br>
 ７：カードを出すことの出来ないプレイヤーも場のカードを全て引る。<br>
 ６：次の店に入って、次のプレイヤーからカードを出して開始する。<br>
 ７：山札が無くなったらラストオーダーとなり、次の取引が発生した場合はゲーム終了する。<br>
-８：引き取ったカードの枚数が最も少ないプレイヤーが勝利となる<br>
+８：引き取ったカードの枚数が最も少ないプレイヤーが勝利となる。<br>
 <br>
 
 <b>たのめないん処理</b><br>
 場のカードを割勘で引き取る。<br>
-カードが残らない場合、次のプレイヤーが一枚目を出します<br>
+カードが残らない場合、次のプレイヤーが一枚目を出します。<br>
 カードが残た場合、最後に出した一枚が次の店の１枚となり、次のプレイヤから再開します。<br>
-
+			
+<b>特別カード</b><br>			
+水：引き取たカードに加て、パスの効果が発動。<br>
+お茶：引き取たカードに加て、リバース（逆転）の効果が発動。<br>			
+するめ：今の店をツケとして、次の店と一緒に会計する。次の取引が発生した場合、そのプレイヤーはするめを加て受け取る。<br>		
 		</p>
 	</div>	
 </div>
