--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@ opacity: 1;
 <b>たのめないん処理</b><br>
 場のカードを割勘で引き取る。<br>
 カードが残らない場合、次のプレイヤーが一枚目を出します。<br>
-カードが残た場合、最後に出した一枚が次の店の１枚となり、次のプレイヤから再開します。<br>
+カードが残た場合、最後に出した一枚が次の店の１枚となり、次のプレイヤから再開します。<br><br>
 			
 <b>特別カード</b><br>			
-水：引き取たカードに加て、パスの効果が発動。<br>
-お茶：引き取たカードに加て、リバース（逆転）の効果が発動。<br>			
+水　　：引き取たカードに加て、パスの効果が発動。<br>
+お茶　：引き取たカードに加て、リバース（逆転）の効果が発動。<br>			
 するめ：今の店をツケとして、次の店と一緒に会計する。次の取引が発生した場合、そのプレイヤーはするめを加て受け取る。<br>		
 		</p>
 	</div>	
