--- a/index.html
+++ b/index.html
@@ -213,8 +213,9 @@ opacity: 1;
 ６：キリ番ゲットした前のプレイヤーは場のカードを全て引き取る。<br>
 ７：カードを出すことの出来ないプレイヤーも場のカードを全て引る。<br>
 ６：次の店に入って、次のプレイヤーからカードを出して開始する。<br>
-７：山札が無くなったらラストオーダーとなり、次の取引が発生した場合はゲーム終了する。<br>
-８：引き取ったカードの枚数が最も少ないプレイヤーが勝利となる。<br>
+７：カードは９枚揃えた場合は「たのめないん」処理を行う。<br>
+８：山札が無くなったらラストオーダーとなり、次の取引が発生した場合はゲーム終了する。<br>
+９：引き取ったカードの枚数が最も少ないプレイヤーが勝利となる。<br>
 <br>
 
 <b>たのめないん処理</b><br>
