--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@ opacity: 1;
 ４：山札から一枚引いて、次のプレイヤーのターンになる。<br>
 ５：合計金額を宣言しながら順番にカードを出し、キリ番(2、3、4000円)をゲットして「ゴチで～す」と宣言する。<br>
 ６：キリ番ゲットした前のプレイヤーは場のカードを全て引き取る。<br>
-７：カードを出すことの出来ないプレイヤーも場のカードを全て引る。<br>
-６：次の店に入って、最後にカードを引取取ったプレイヤーからカードを出して開始する。<br>
+７：カードを出すことの出来ないプレイヤーも場のカードを全て引取る。<br>
+６：次の店に入って、最後にカードを引取ったプレイヤーからカードを出して開始する。<br>
 ７：カードは９枚揃えた場合は「たのめないん」処理を行う。<br>
 ８：山札が無くなったらラストオーダーとなり、次の取引が発生した場合はゲーム終了する。<br>
 ９：引き取ったカードの枚数が最も少ないプレイヤーが勝利となる。<br>
